argocd/base/argo-cd-ui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo-cd-ui
  annotations:
    ingress.kubernetes.io/proxy-body-size: 100M
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/app-root: "/"
    external-dns.alpha.kubernetes.io/hostname: cd.gitops-do.pacoguzman.xyz
    external-dns.alpha.kubernetes.io/ttl: "30"
    cert-manager.io/issuer: "argo-cd-issuer"
spec:
  tls:
  - hosts:
    - cd.gitops-do.pacoguzman.xyz
    secretName: argocd-secret
  rules:
  - host: cd.gitops-do.pacoguzman.xyz
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        # pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              name: https
